k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: myuser/account-service:latest
          imagePullPolicy: Never # Uses local image
          ports:
            - containerPort: 8000
          command: ["/bin/sh", "-c"]
          args:
            - |
              python manage.py migrate
              python manage.py collectstatic --noinput
              gunicorn account_backend.wsgi:application --bind 0.0.0.0:8000

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  selector:
    app: account-service
  ports:
    - protocol: TCP
      port: 8000 # Cluster internal port
      targetPort: 8000 # Container port
