k8s/consumet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumet-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumet-api
  template:
    metadata:
      labels:
        app: consumet-api
    spec:
      containers:
        - name: consumet-api
          image: myuser/consumet-api:latest
          imagePullPolicy: Never # 'Never' for local Minikube, 'Always' for Docker Hub
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: consumet-api
spec:
  selector:
    app: consumet-api
  ports:
    - protocol: TCP
      port: 3000 # Cluster internal port (Ingress talks to this)
      targetPort: 8000 # Container port (Consumet listens here)
