k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: client
    - port: 9093
      targetPort: 9093
      name: controller
  selector:
    app: kafka
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: "kafka-service"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.1
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            # Update path to standard linux location
            - name: kafka-data
              mountPath: /var/lib/kafka/data

  # Persistence Configuration
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
