k8s/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-page
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-page
  template:
    metadata:
      labels:
        app: main-page
    spec:
      containers:
        - name: main-page
          image: myuser/main-page:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: main-page
spec:
  selector:
    app: main-page
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
