k8s/watch-list-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchlist-service
  labels:
    app: watchlist-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchlist-service
  template:
    metadata:
      labels:
        app: watchlist-service
    spec:
      containers:
        - name: watchlist-service
          image: myuser/watchlist-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: watchlist-service
  labels:
    app: watchlist-service
spec:
  type: ClusterIP
  selector:
    app: watchlist-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
